# JobViper

./: .gitignore  README.md  TODO.md  pyproject.toml
jobviper/: database.py  main.py  models.py
